[tool.poetry]
name = "calibrator"
version = "0.1.0"
description = ""
authors = ["PlusF <rkaneda896@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.24.2"
scipy = "1.10.1"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
