[tool.poetry]
name = "calibrator"
version = "0.1.0"
description = ""
authors = ["PlusF <rkaneda896@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.8"
numpy = "1.19.3"
scipy = ">=1.0.1"
scikit-learn = "0.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
