[tool.poetry]
name = "calibrator"
version = "0.2.0"
description = ""
authors = ["PlusF <rkaneda896@g.ecc.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.6"
numpy = ">=1.25.0"
scipy = ">=1.11.2"
scikit-learn = ">=1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
